syntax = "proto3";
package persistence;

option go_package = "github.com/pokt-network/pocket/persistence/types";

message Block {
    uint64 height = 1;
    string stateHash = 2;
    string prevStateHash = 3; // The stateHash of the block at height-1
    bytes proposerAddress = 4; // The proposer of this block
    bytes quorumCertificate = 5; // The quorum certificate containing signature from 2/3+ validators at height
    // INVESTIGATE(#361): Decide if we need `transactionsHash` given that it is captured in the `transactionsTree`.
    bytes transactionsHash = 6; // The hash of all the transactions in the block
}